--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -48,6 +48,15 @@ li.menu-item.menu-item-32 :hover{
     width: 100%;
 }
 
+/* Lien Admin */
+.admin-link {
+    color: #000000;
+    text-align: center;
+    font-family: 'Syne', sans-serif;
+    font-weight: 700;
+    font-size: 20px;
+  }
+
 /* BODY */
 
  h1 {
@@ -112,6 +121,58 @@ label {
 }
 
 /* FORMULAIRE "COMMANDER" */
+
+.row {
+    display: flex;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.row-1{
+    display: flex;
+    justify-content: space-evenly;
+    color: #fff;
+}
+
+.titre-1 {
+    padding-right: 500px;
+    padding-left: -50px;
+}
+
+.col {
+    display: flex;
+    justify-content: space-around;
+    width: 5%;   
+}
+
+.elementor-kit-17 label {
+    font-family: syne;
+    font-size: 18px;
+    color: #fff;
+    margin-bottom: 20px;
+}
+
+.col-1 .col-2{
+    font-size: 180px;
+}
+
+
+/*
+.v-line{
+    border-left: thick solid #000;
+    height:100%;
+    left: 50%;
+    position: absolute;
+   }
+
+hr{
+    height:100vh;
+    width:.5vw;
+    border-width:0;
+    color:#000;
+    background-color:#000;
+   }
+*/
 /*
 <div class="row">
     <div class="col">[number number-126 min:0 class:fraise "0"]</div>
