--- a/wp-content/themes/planty/css/theme.css
+++ b/wp-content/themes/planty/css/theme.css
@@ -13,6 +13,9 @@
 .site-header {
     height: 80px;
     padding-inline-end: 0 !important;
+    
+  margin-top: -16px;
+  margin-bottom: 10px;
   }
 
  li.menu-item a {
@@ -26,6 +29,8 @@
     line-height: normal;
     padding-right: 20px;
     width: 165px;
+    padding-top: 26px !important;
+    padding-bottom: 30px !important;
  }
 
 li.menu-item.menu-item-32, 
@@ -202,7 +207,7 @@ input::-webkit-inner-spin-button {
 
 .form-mobile input::placeholder {
   color: #888; /* Couleur du texte du placeholder */
-  font-style: italic; /* Style du texte */
+  font-style: italic;
 }
 
 /**************** FOOTER ****************/
@@ -216,9 +221,10 @@ li.menu-item.menu-item-43 a {
     font-size: 16px;
     font-style: normal;
     line-height: normal;
+    width: 100%;
 }
 
 .site-footer {
-    padding-block-start: 20px !important;
-    padding-block-end: 21px !important;
+    padding-block-start: 15px !important;
+    padding-block-end: 0 !important;
   }
